--- a/index.html
+++ b/index.html
@@ -94,156 +94,175 @@
 
         var game = document.getElementById("game");
 
-        var characterClass = {
-            width: 0.7 * game.offsetWidth / widthCountSquares,
-            height: 0.7 * game.offsetHeight / heightCountSquares,
-            createCharacter: function () {
-                var character = document.createElement('div');
-                character.setAttribute("id", "character");
-                character.style.width = "100%";
-                character.style.height = "100%";
-                character.style.top = "0px";
-                character.style.left = "0px";
-                character.innerText = 0;
+        // var characterClass = {
+        //     width: 0.7 * game.offsetWidth / widthCountSquares,
+        //     height: 0.7 * game.offsetHeight / heightCountSquares,
+        //     createCharacter: function () {
+        //         var character = document.createElement('div');
+        //         character.setAttribute("id", "character");
+        //         character.style.width = "100%";
+        //         character.style.height = "100%";
+        //         character.style.top = "0px";
+        //         character.style.left = "0px";
+        //         character.innerText = 0;
 
-                return character;
-            }
-        };
+        //         return character;
+        //     }
+        // };
 
-        function Character(startPositionX, startPositionY) {
+        // Character class
+        function Character(startPositionX, startPositionY, maxCountOfBoxes) {
             this.positionX = startPositionX;
             this.positionY = startPositionY;
+            this.maxCountOfBoxes = maxCountOfBoxes;
+            this.currentCountOfBoxes = 0;
+            this.createCharacter();
         }
 
         Character.prototype.createCharacter = function () {
-
+            var character = document.createElement('div');
+            character.setAttribute("id", "character");
+            character.style.width = "100%";
+            character.style.height = "100%";
+            character.style.top = "0px";
+            character.style.left = "0px";
+            character.innerText = 0;
+            this.character = character;
         }
 
+        Character.prototype.addBox = function () {
+            if (this.currentCountOfBoxes < this.maxCountOfBoxes) {
+                this.currentCountOfBoxes += 1;
+                this.character.innerText = this.currentCountOfBoxes;
+            }
+        }
+
+        Character.prototype.removeBox = function () {
+            if (this.currentCountOfBoxes > 0) {
+                this.currentCountOfBoxes -= 1;
+                this.character.innerText = this.currentCountOfBoxes;
+            }
+        }
+
+        Character.prototype.getCurrentPosition = function () {
+            return {
+                currentPositionX: this.positionX,
+                currentPositionY: this.positionY
+            }
+        }
+
+        Character.prototype.moveCharacter = function (newPositionX, newPositionY) {
+
+            this.positionX = newPositionX;
+            this.positionY = newPositionY;
+        }
+
+        Character.prototype.getCountOfBoxes = function () {
+            return this.currentCountOfBoxes;
+        }
+
+
+
+
+
+
         var grid = document.getElementById("grid");
-        var character = characterClass.createCharacter();
+        //var character = characterClass.createCharacter();
+        var character = new Character(widthCountSquares - 1, heightCountSquares - 1, 5);
         var tds = grid.getElementsByTagName('td');
         //tds[widthCountSquares * (heightCountSquares + 1) - 1].appendChild(character);
 
         var currentPositionX = widthCountSquares - 1;
         var currentPositionY = heightCountSquares - 1;
-        tds[currentPositionY * widthCountSquares + currentPositionX].appendChild(character);
+        tds[currentPositionY * widthCountSquares + currentPositionX].appendChild(character.character);
 
 
 
         document.onkeydown = function (e) {
 
+
+            let {
+                currentPositionX,
+                currentPositionY
+            } = character.getCurrentPosition();
+
+            console.log("start", currentPositionX, currentPositionY);
+
             switch (e.keyCode) {
-                case 37:
+
+                case 37: // Left
                     if (currentPositionX != 0 && currentPositionY !=
                         heightCountSquares + 1 && currentPositionY != heightCountSquares - 1) {
-                        character.parentNode.removeChild(character);
+                        character.character.parentNode.removeChild(character.character);
                         currentPositionX -= 1;
-                        tds[currentPositionY * widthCountSquares + currentPositionX].appendChild(character);
+                        character.moveCharacter(currentPositionX, currentPositionY);
+                        tds[currentPositionY * widthCountSquares + currentPositionX].appendChild(character
+                            .character);
                     }
 
-                    // var leftDistance = parseFloat(parseFloat(character.style.right).toFixed(2)) + parseFloat(
-                    //     parseFloat(
-                    //         character.style.width)
-                    //     .toFixed(2));
-                    // console.log(leftDistance);
-                    // // refractoring double parseFloat
-                    // if (leftDistance < parseFloat(character.style.width) * widthCountSquares && parseFloat(
-                    //         character.style.bottom) >= 0) {
-                    //     character.style.right = leftDistance +
-                    //         "px";
-                    // }
                     break;
-                case 38:
+                case 38: // Up
                     if (currentPositionY != 0) {
-                        character.parentNode.removeChild(character);
+                        character.character.parentNode.removeChild(character.character);
                         currentPositionY -= 1;
-                        tds[currentPositionY * widthCountSquares + currentPositionX].appendChild(character);
+                        character.moveCharacter(currentPositionX, currentPositionY);
+                        console.log(currentPositionX, currentPositionY);
+                        tds[currentPositionY * widthCountSquares + currentPositionX].appendChild(character.character);
                     }
-                    // var upDistance = parseFloat(parseFloat(character.style.bottom).toFixed(1)) + parseFloat(
-                    //     parseFloat(
-                    //         character.style.height).toFixed(1));
-                    // console.log(upDistance);
-                    // if (upDistance <= parseFloat(character.style.height) * heightCountSquares) {
-                    //     character.style.bottom = upDistance +
-                    //         "px";
-                    // }
+
                     break;
                 case 39:
                     if (currentPositionX != widthCountSquares - 1) {
-                        character.parentNode.removeChild(character);
+                        character.character.parentNode.removeChild(character.character);
                         currentPositionX += 1;
-                        tds[currentPositionY * widthCountSquares + currentPositionX].appendChild(character);
-                    }
-                    // var rightDistance = parseFloat(character.style.right) - parseFloat(character.style.width);
+                        character.moveCharacter(currentPositionX, currentPositionY);
 
-                    // console.log(rightDistance);
-                    // if (rightDistance >= 0) {
-                    //     character.style.right = rightDistance +
-                    //         "px";
-                    // }
+                        tds[currentPositionY * widthCountSquares + currentPositionX].appendChild(character.character);
+                    }
+
                     break;
                 case 40:
                     if (currentPositionY != heightCountSquares - 1 && currentPositionX == widthCountSquares - 1) {
-                        character.parentNode.removeChild(character);
+                        character.character.parentNode.removeChild(character.character);
                         currentPositionY += 1;
-                        tds[currentPositionY * widthCountSquares + currentPositionX].appendChild(character);
+                        character.moveCharacter(currentPositionX, currentPositionY);
+
+                        tds[currentPositionY * widthCountSquares + currentPositionX].appendChild(character.character);
                     } else if (currentPositionY != heightCountSquares - 2 && currentPositionX != widthCountSquares -
                         1) {
-                        character.parentNode.removeChild(character);
+                        character.character.parentNode.removeChild(character.character);
                         currentPositionY += 1;
-                        tds[currentPositionY * widthCountSquares + currentPositionX].appendChild(character);
+                        character.moveCharacter(currentPositionX, currentPositionY);
+
+                        tds[currentPositionY * widthCountSquares + currentPositionX].appendChild(character.character);
                     }
-                    // var bottomDistance = parseFloat(character.style.bottom) - parseFloat(character.style.height);
-                    // console.log(bottomDistance);
-                    // console.log(character.style.right);
-                    // if (bottomDistance <= 0 && parseFloat(character.style.right) === 0 && bottomDistance <=
-                    //     bottomDistance + parseFloat(character.style.bottom)) {
-                    //     character.style.bottom = bottomDistance + "px";
-                    // } else if (bottomDistance < bottomDistance + parseFloat(character.style.bottom)) {
-                    //     character.style.bottom = bottomDistance +
-                    //         "px";
-                    // }
                     break;
                 case 32:
                     var positionIndex = currentPositionY * widthCountSquares + currentPositionX;
 
                     if (positionIndex == widthCountSquares * heightCountSquares - 1) {
                         // On Exit position
-                        var countOfBoxes = parseInt(character.innerHTML);
-                        if (countOfBoxes != 0) {
+                        //var countOfBoxes = parseInt(character.removeBox());
+                        if (character.getCountOfBoxes() != 0) {
+                            console.log(character.getCountOfBoxes());
                             tds[positionIndex].innerText = parseInt(tds[positionIndex].innerHTML) + 1;
-                            tds[positionIndex].appendChild(character);
-                            character.innerText = parseInt(character.innerText) - 1;
+                            character.removeBox();
+                            tds[positionIndex].appendChild(character.character);
+                            console.log("Exit")
                         }
                     } else {
                         // In storages
                         var countOfBoxes = parseInt(tds[positionIndex].innerHTML);
                         if (countOfBoxes != 0) {
                             tds[positionIndex].innerText = countOfBoxes - 1;
-                            tds[positionIndex].appendChild(character);
-                            character.innerText = parseInt(character.innerText) + 1;
+                            character.addBox();
+                            console.log(character.getCountOfBoxes());
+                            tds[positionIndex].appendChild(character.character);
+
                         }
                     }
-                    // var rowIndex = heightCountSquares - parseFloat(character.style.bottom) / parseFloat(character.style
-                    //     .height) - 1;
-                    // var columnIndex = widthCountSquares - parseFloat(
-                    //     character.style
-                    //     .right) / parseFloat(character.style.width) - 1;
-                    // if (rowIndex < heightCountSquares) {
-                    //     var rightIndex = Math.round(rowIndex * widthCountSquares + columnIndex);
-                    //     var storage = document.getElementsByTagName('td')[rightIndex];
-                    //     var currentNumberOfBoxes = parseFloat(storage.innerText);
-                    //     if (currentNumberOfBoxes > 0) {
-                    //         storage.innerHTML = currentNumberOfBoxes - 1;
-                    //         character.innerText = parseFloat(character.innerText) + 1;
-                    //     }
-
-                    // } else if (parseFloat(character.innerText) > 0) {
-                    //     character.innerText = parseFloat(character.innerText) - 1;
-                    // }
-                    //console.log(document.getElementsByTagName("td")[rowIndex * heightCountSquares + columnIndex].innerText)
-
             }
+
         }
     </script>
 </body>
